--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "solvebio"]
+	path = solvebio
+	url = https://github.com/solvebio/solvebio-r
+	shallow = true
+	registered = true
